add header footer

--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Manali | Web Developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Hi! This is Manali!</h1>
+    <!-- header starts here -->
+    <header>
+        <div class="container">
+            <div class="logo-menu-wrap">
+                <h1 class="logo"><strong>Manali</strong> Darji</h1>
+
+                <nav class="header-menu">
+                    <ul>
+                        <li><a href="">hello</a></li>
+                        <li><a href="">skills</a></li>
+                        <li><a href="">experience</a></li>
+                        <li><a href="">education</a></li>
+                        <li><a href="">portfolio</a></li>
+                        <li><a href="">contact</a></li>
+                    </ul>
+                </nav>
+
+                <div id="hamburger">
+                    <span></span><span></span><span></span>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div id="mob-header-menu" class="">
+        <div id="close-mob-menu">
+            <span></span><span></span>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="">hello</a></li>
+                <li><a href="">skills</a></li>
+                <li><a href="">experience</a></li>
+                <li><a href="">education</a></li>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <!-- header ends here -->
+
+    <!-- main-wrap starts here -->
+    <div id="main-wrap">
+        <div class="container">
+
+        </div>
+    </div>
+    <!-- main-wrap ends here -->
+
+    <!-- footer starts here -->
+    <footer class="text-center">
+        <div class="container">
+            &copy; Copyrights Reserved | manalidarji.github.io | 2022
+        </div>
+    </footer>
+    <!-- footer ends here -->
+
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
