--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav class="header-menu">
                     <ul>
                         <li><a href="#hello">hello</a></li>
-                        <li><a href="">skills</a></li>
+                        <li><a href="#skills">skills</a></li>
                         <li><a href="">experience</a></li>
                         <li><a href="">education</a></li>
                         <li><a href="">portfolio</a></li>
@@ -45,7 +45,7 @@
         <nav>
             <ul>
                 <li><a href="#hello">hello</a></li>
-                <li><a href="">skills</a></li>
+                <li><a href="#skills">skills</a></li>
                 <li><a href="">experience</a></li>
                 <li><a href="">education</a></li>
                 <li><a href="">portfolio</a></li>
@@ -56,42 +56,75 @@
 
     
     <!-- main-wrap starts here -->
-    <div id="main-wrap">
-        <div class="container">
-            <!-- hero section -->
-            <div class="hero-section" id="hello">
-                <div class="my-image-wrap">
-                    <div class="my-image"></div>
-                </div>
+    <div id="main-wrap" class="divider">
+        <!-- hero section -->
+        <div class="hero-section-main-wrap divider"  id="hello">
+            <div class="container">
+                <div class="hero-section">
+                    <div class="my-image-wrap">
+                        <div class="my-image"></div>
+                    </div>
 
-                <div class="hero-content">
-                    <h2>I am Manali Darji <span>.</span> </h2>
-                    <p>Web Developer located in Toronto, Ontario with 6+ years of experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues for Firefox & Internet Explorer users whilst rigorously adhering to project deadlines.</p>
-                    <ul class="icons-wrap">
-                        <li class="icon gmail-wrap">
-                            <a href="mailto:darjimanali93@gmail.com" target="_blank">
-                                <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g><path d="M25.49,30H4.5A3.35,3.35,0,0,1,2,29a3.35,3.35,0,0,1-1-2.48V5.5A3.35,3.35,0,0,1,2,3,3.35,3.35,0,0,1,4.5,2h21A3.35,3.35,0,0,1,28,3,3.35,3.35,0,0,1,29,5.5v21A3.52,3.52,0,0,1,25.49,30Zm-3-7.17a2.93,2.93,0,0,0,1.71-.37,1.41,1.41,0,0,0,.49-1.22V10.36a1.55,1.55,0,0,0-.47-1.13,1.51,1.51,0,0,0-1.13-.47H6.83a1.55,1.55,0,0,0-1.13.47,1.53,1.53,0,0,0-.47,1.12V21.24a1.53,1.53,0,0,0,.47,1.12,1.55,1.55,0,0,0,1.13.47Zm-14.7-.76V13.14l6.46,4.45Zm14.14.37H8l6.63-4.63a.6.6,0,0,0,.34.16,1,1,0,0,0,.33-.16Zm-7-8.15L8,9.16H21.9Zm7.14,7.78-6.46-4.48,6.46-4.45Z"/></g></svg>
-                            </a>
-                        </li>
+                    <div class="hero-content">
+                        <h2>I am Manali Darji <span>.</span> </h2>
+                        <p>Web Developer located in Toronto, Ontario with 6+ years of experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues for Firefox & Internet Explorer users whilst rigorously adhering to project deadlines.</p>
+                        <ul class="icons-wrap">
+                            <li class="icon gmail-wrap">
+                                <a href="mailto:darjimanali93@gmail.com" target="_blank">
+                                    <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g><path d="M25.49,30H4.5A3.35,3.35,0,0,1,2,29a3.35,3.35,0,0,1-1-2.48V5.5A3.35,3.35,0,0,1,2,3,3.35,3.35,0,0,1,4.5,2h21A3.35,3.35,0,0,1,28,3,3.35,3.35,0,0,1,29,5.5v21A3.52,3.52,0,0,1,25.49,30Zm-3-7.17a2.93,2.93,0,0,0,1.71-.37,1.41,1.41,0,0,0,.49-1.22V10.36a1.55,1.55,0,0,0-.47-1.13,1.51,1.51,0,0,0-1.13-.47H6.83a1.55,1.55,0,0,0-1.13.47,1.53,1.53,0,0,0-.47,1.12V21.24a1.53,1.53,0,0,0,.47,1.12,1.55,1.55,0,0,0,1.13.47Zm-14.7-.76V13.14l6.46,4.45Zm14.14.37H8l6.63-4.63a.6.6,0,0,0,.34.16,1,1,0,0,0,.33-.16Zm-7-8.15L8,9.16H21.9Zm7.14,7.78-6.46-4.48,6.46-4.45Z"/></g></svg>
+                                </a>
+                            </li>
 
-                        <li class="icon linkedin-wrap">
-                            <a href="https://www.linkedin.com/in/manalidarji/" target="_blank">
-                                <svg style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" viewBox="0 0 512 512">
-                                    <path d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-386.892,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Zm-288.985,423.278l0,-225.717l-75.04,0l0,225.717l75.04,0Zm270.539,0l0,-129.439c0,-69.333 -37.018,-101.586 -86.381,-101.586c-39.804,0 -57.634,21.891 -67.617,37.266l0,-31.958l-75.021,0c0.995,21.181 0,225.717 0,225.717l75.02,0l0,-126.056c0,-6.748 0.486,-13.492 2.474,-18.315c5.414,-13.475 17.767,-27.434 38.494,-27.434c27.135,0 38.007,20.707 38.007,51.037l0,120.768l75.024,0Zm-307.552,-334.556c-25.674,0 -42.448,16.879 -42.448,39.002c0,21.658 16.264,39.002 41.455,39.002l0.484,0c26.165,0 42.452,-17.344 42.452,-39.002c-0.485,-22.092 -16.241,-38.954 -41.943,-39.002Z"/>
-                                    </svg>
-                            </a>
-                        </li>
+                            <li class="icon linkedin-wrap">
+                                <a href="https://www.linkedin.com/in/manalidarji/" target="_blank">
+                                    <svg style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" viewBox="0 0 512 512">
+                                        <path d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-386.892,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Zm-288.985,423.278l0,-225.717l-75.04,0l0,225.717l75.04,0Zm270.539,0l0,-129.439c0,-69.333 -37.018,-101.586 -86.381,-101.586c-39.804,0 -57.634,21.891 -67.617,37.266l0,-31.958l-75.021,0c0.995,21.181 0,225.717 0,225.717l75.02,0l0,-126.056c0,-6.748 0.486,-13.492 2.474,-18.315c5.414,-13.475 17.767,-27.434 38.494,-27.434c27.135,0 38.007,20.707 38.007,51.037l0,120.768l75.024,0Zm-307.552,-334.556c-25.674,0 -42.448,16.879 -42.448,39.002c0,21.658 16.264,39.002 41.455,39.002l0.484,0c26.165,0 42.452,-17.344 42.452,-39.002c-0.485,-22.092 -16.241,-38.954 -41.943,-39.002Z"/>
+                                        </svg>
+                                </a>
+                            </li>
 
-                        <li class="icon github-wrap">
-                            <a href="https://github.com/manalidarji" target="_blank">
-                                <svg enable-background="new 0 0 50 50" viewBox="0 0 50 50"><path d="M45,1H5C2.8,1,1,2.8,1,5v40c0,2.2,1.8,4,4,4h40c2.2,0,4-1.8,4-4V5C49,2.8,47.2,1,45,1z"/><path d="M30.4,40h-4h-4c0,0,0-2.4,0-4c-5.5,1.2-7-3-7-3c-1-2-2-3-2-3c-2-1.2,0-1,0-1c2,0,3,2,3,2  c1.8,3,4.9,2.5,6,2c0-1,0.4-2.5,1-3c-4.4-0.5-8-3-8-8s1-6,2-7c-0.2-0.5-1-2.3,0-5c0,0,2,0,4,3c1-1,4-1,5-1c1,0,4,0,5,1c2-3,4-3,4-3  c1.1,2.7,0.2,4.5,0,5c1,1,2,2,2,7s-3.6,7.5-8,8c0.6,0.5,1,2.2,1,3L30.4,40L30.4,40z" fill="#006778"/></svg>
-                            </a>
-                        </li>
-                    </ul>
+                            <li class="icon github-wrap">
+                                <a href="https://github.com/manalidarji" target="_blank">
+                                    <svg enable-background="new 0 0 50 50" viewBox="0 0 50 50"><path d="M45,1H5C2.8,1,1,2.8,1,5v40c0,2.2,1.8,4,4,4h40c2.2,0,4-1.8,4-4V5C49,2.8,47.2,1,45,1z"/><path d="M30.4,40h-4h-4c0,0,0-2.4,0-4c-5.5,1.2-7-3-7-3c-1-2-2-3-2-3c-2-1.2,0-1,0-1c2,0,3,2,3,2  c1.8,3,4.9,2.5,6,2c0-1,0.4-2.5,1-3c-4.4-0.5-8-3-8-8s1-6,2-7c-0.2-0.5-1-2.3,0-5c0,0,2,0,4,3c1-1,4-1,5-1c1,0,4,0,5,1c2-3,4-3,4-3  c1.1,2.7,0.2,4.5,0,5c1,1,2,2,2,7s-3.6,7.5-8,8c0.6,0.5,1,2.2,1,3L30.4,40L30.4,40z" fill="#006778"/></svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
         </div>
+
+        <!-- skills section -->
+        <div id="skills" class="skills-outter-wrap">
+            <div class="container">
+                <div class="skills-wrap my-flex-box divider border-bottom">
+                    <h6 class="section-title">skills<span>.</span></h6>
+                    <div class="skills-content">
+                        <div class="single-skill-type">
+                            <p class="skill-type">web development</p>
+                            <p class="all-skills">Javascript, Node.js, PHP, MongoDB, PostgreSQL.</p>
+                        </div>
+                        <div class="single-skill-type">
+                            <p class="skill-type">Frontend Development</p>
+                            <p class="all-skills">HTML, CSS, SASS, React, Redux, Bootstrap, Wordpress.</p>
+                        </div>
+                        <div class="single-skill-type">
+                            <p class="skill-type">UI\UX Design</p>
+                            <p class="all-skills">Photoshop, Zeplin, Figma, Wireframing, User Research, Usability Testing.</p>
+                        </div>
+                        <div class="single-skill-type">
+                            <p class="skill-type">Professional Skills</p>
+                            <p class="all-skills">Effective Communication, Time Management, Website Optimization, Agile methodologies, SEO, Design Patterns and Principles.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- expierence section -->
+        <!-- <div id="expierence" class="divider expierence-outter-wrap">
+            huhu
+        </div> -->
     </div>
     <!-- main-wrap ends here -->
 
