add experience and education section

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
                 <nav class="header-menu">
                     <ul>
-                        <li><a href="#hello">hello</a></li>
+                        <li><a href="#about">about</a></li>
                         <li><a href="#skills">skills</a></li>
-                        <li><a href="">experience</a></li>
-                        <li><a href="">education</a></li>
-                        <li><a href="">portfolio</a></li>
-                        <li><a href="">contact</a></li>
+                        <li><a href="#experience">experience</a></li>
+                        <li><a href="#education">education</a></li>
+                        <li><a href="#portfolio">portfolio</a></li>
+                        <li><a href="#contact">contact</a></li>
                     </ul>
                 </nav>
 
@@ -44,12 +44,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#hello">hello</a></li>
+                <li><a href="#about">about</a></li>
                 <li><a href="#skills">skills</a></li>
-                <li><a href="">experience</a></li>
-                <li><a href="">education</a></li>
-                <li><a href="">portfolio</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="#experience">experience</a></li>
+                <li><a href="#education">education</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
     </div>
@@ -58,7 +58,7 @@
     <!-- main-wrap starts here -->
     <div id="main-wrap" class="divider">
         <!-- hero section -->
-        <div class="hero-section-main-wrap divider"  id="hello">
+        <div class="hero-section-main-wrap divider"  id="about">
             <div class="container">
                 <div class="hero-section">
                     <div class="my-image-wrap">
@@ -101,19 +101,19 @@
                     <h6 class="section-title">skills<span>.</span></h6>
                     <div class="skills-content">
                         <div class="single-skill-type">
-                            <p class="skill-type">web development</p>
+                            <p class="skill-type sub-heading">web development</p>
                             <p class="all-skills">Javascript, Node.js, PHP, MongoDB, PostgreSQL.</p>
                         </div>
                         <div class="single-skill-type">
-                            <p class="skill-type">Frontend Development</p>
+                            <p class="skill-type sub-heading">Frontend Development</p>
                             <p class="all-skills">HTML, CSS, SASS, React, Redux, Bootstrap, Wordpress.</p>
                         </div>
                         <div class="single-skill-type">
-                            <p class="skill-type">UI\UX Design</p>
+                            <p class="skill-type sub-heading">UI\UX Design</p>
                             <p class="all-skills">Photoshop, Zeplin, Figma, Wireframing, User Research, Usability Testing.</p>
                         </div>
                         <div class="single-skill-type">
-                            <p class="skill-type">Professional Skills</p>
+                            <p class="skill-type sub-heading">Professional Skills</p>
                             <p class="all-skills">Effective Communication, Time Management, Website Optimization, Agile methodologies, SEO, Design Patterns and Principles.</p>
                         </div>
                     </div>
@@ -121,10 +121,87 @@
             </div>
         </div>
 
-        <!-- expierence section -->
-        <!-- <div id="expierence" class="divider expierence-outter-wrap">
-            huhu
-        </div> -->
+        <!-- experience section -->
+        <div id="experience" class="experience-outter-wrap">
+            <div class="container">
+                <div class="experience-wrap my-flex-box divider border-bottom">
+                    <h6 class="section-title">experience<span>.</span></h6>
+                    <div class="experience-content content">
+                        <div class="single">
+                            <p class="sub-heading"><strong>UI Developer</strong> | Media.net Software Services (India) Pvt. Ltd</p>
+                            <p><em>Jul 2017 - Aug 2021</em></p>
+                            <ul class="roles">
+                                <li>Implemented Single Page Applications using React as Front-End Technology, along with integrating the
+                                    backend systems using Rest APIs.</li>
+                                <li>Implemented custom Wordpress themes from scratch as per the designs for 10+ websites.</li>
+                                <li>Delivered 10+ websites with engaging user experience and highly optimised code that helped reduce load
+                                    times by 60% and improved revenue by 35%.</li>
+                                <li>Followed modular and DRY(Don't Repeat Yourself) approach throughout the process, leading to decrease in
+                                    development time by 80%.
+                                    </li>
+                                <li>Implemented Google Analytics and Facebook Pixel Code which helped the business team understand various
+                                    user's interaction with the website, thus increasing the overall revenue by 15%.</li>
+                                <li>Created an internal workflow process for bulk tasks amongst team members which decreased the
+                                    turnaround time by 75%.</li>
+                                <li>Supervised and mentored 4 junior team members to achieve high performance of the team and meet all
+                                        business goals.</li>
+                            </ul>
+                        </div>
+
+                        <div class="single">
+                            <p class="sub-heading"><strong>Freelance Web Developer</strong> | Snehanjali Electronics & Saisagar Garments</p>
+                            <p><em>May 2020 - Feb 2021</em></p>
+                            <ul class="roles">
+                                <li>Developed an e-commerce platform for the clients seeking an online presence using Wordpress and
+                                    WooCommerce.</li>
+                                <li>Assisted with online sales and reports which enabled the client to increase the user reach by 4 times and an
+                                    increase in revenue by 200%</li>
+                                <li>Handled all verbal and written communications between hosting companies, clients, and other vendors like
+                                    online payment gateways companies to ensure a smooth process.</li>
+                            </ul>
+                        </div>
+
+                        <div class="single">
+                            <p class="sub-heading"><strong>Software Engineer</strong> | Capegemini</p>
+                            <p><em>Jul 2014 - Jun 2017</em></p>
+                            <ul class="roles">
+                                <li>Experienced with Software Development Life Cycle(SDLC) which includes methodologies like Waterfall and Agile method.</li>
+                                <li>Acquired in-depth knowledge of industry's best testing practices for Functional and Performance testing of a web application.</li>
+                                <li>Created automated test cases for Functional and Regression testing based on the requirements using Ranorex Studio to decrease testing time by 60%</li>
+                                <li>Experienced in executing SQL queries in order to view successful transactions of data and for validating data.</li>
+                                <li>Reviewed and reported software bug reports, highlighting problem areas.</li>
+                                <li>Trained new hired team members and promoted supportive, performance-oriented atmosphere.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- education section -->
+        <div id="education" class="education-outter-wrap">
+            <div class="container">
+                <div class="education-wrap my-flex-box divider border-bottom">
+                    <h6 class="section-title">education<span>.</span></h6>
+                    <div class="education-content content">
+                        <div class="single">
+                            <p class="sub-heading"><strong>Advanced Diploma - Database Application Developer</strong> | Seneca College</p>
+                            <p><em>Sep 2021 - Current</em></p>
+                            <ul class="roles">
+                                <li>Got into President’s Honour List for Fall'21 Semester</li>
+                            </ul>
+                        </div>
+                        <div class="single">
+                            <p class="sub-heading"><strong>Bachelor of Engineering(B.E.)</strong> | Mumbai University</p>
+                            <p><em>Jun 2010 - May 2014</em></p>
+                            <ul class="roles">
+                                <li>Passed B.E. in with distinction level</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- main-wrap ends here -->
 
