add contact section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <p class="sub-heading"><strong>Advanced Diploma - Database Application Developer</strong> | Seneca College</p>
                             <p><em>Sep 2021 - Current</em></p>
                             <ul class="roles">
-                                <li>Got into President’s Honour List for Fall'21 Semester</li>
+                                <li>Got into President's Honour List for Fall'21 Semester</li>
                             </ul>
                         </div>
                         <div class="single">
@@ -198,6 +198,24 @@
                                 <li>Passed B.E. in with distinction level</li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- contact section -->
+        <div id="contact" class="contact-outter-wrap">
+            <div class="container">
+                <div class="my-flex-box">
+                    <h6 class="section-title">contact<span>.</span></h6>
+                    <div class="contact-content content">
+                        <div class="single">
+                            <p class="sub-heading">Are you working on something great?</p>
+                            <p><em>I would love to help make it happen! Drop me a message and let's build amazing things together!</em></p>
+                            <ul class="roles">
+                                <li><a href="mailto:darjimanali93@gmail.com">darjimanali93@gmail.com</a></li>
+                            </ul>
+                        </div>                       
                     </div>
                 </div>
             </div>
