add typing effect for hero title section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                     </div>
 
                     <div class="hero-content">
-                        <h2>I am Manali Darji <span>.</span> </h2>
+                        <h2>
+                            <span id="about-title"></span>
+                            <span class="input-cursor"></span>
+                        </h2>
                         <p>Web Developer located in Toronto, Ontario with 6+ years of experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues for Firefox & Internet Explorer users whilst rigorously adhering to project deadlines.</p>
                         <ul class="icons-wrap">
                             <li class="icon gmail-wrap">
@@ -198,6 +201,21 @@
                                 <li>Passed B.E. in with distinction level</li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- portfolio section -->
+        <div id="portfolio" class="portfolio-outter-wrap divider">
+            <div class="container">
+                <h6 class="section-title text-center">portfolio<span>.</span></h6>
+                <div class="portfolio-wrap">
+                    <div class="project-wrap">
+                        <div class="project-img-wrap">
+                            <img src="" alt="Project" />
+                        </div>
+
                     </div>
                 </div>
             </div>
