add heart in footer

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <!-- footer starts here -->
     <footer class="text-center">
         <div class="container">
-            &copy; Copyrights Reserved | manalidarji.github.io | 2022
+            manalidarji.github.io | Made with &nbsp; <span class="heart"></span> &nbsp; | 2022
         </div>
     </footer>
     <!-- footer ends here -->
