add portfolio section

--- a/index.html
+++ b/index.html
@@ -210,13 +210,8 @@
         <div id="portfolio" class="portfolio-outter-wrap divider">
             <div class="container">
                 <h6 class="section-title text-center">portfolio<span>.</span></h6>
-                <div class="portfolio-wrap">
-                    <div class="project-wrap">
-                        <div class="project-img-wrap">
-                            <img src="" alt="Project" />
-                        </div>
-
-                    </div>
+                <div id="all-projects-wrap">
+                    
                 </div>
             </div>
         </div>
