fix spelling issue

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div>
 
                         <div class="single">
-                            <p class="sub-heading"><strong>Software Engineer</strong> | Capegemini</p>
+                            <p class="sub-heading"><strong>Software Engineer</strong> | Capgemini</p>
                             <p><em>Jul 2014 - Jun 2017</em></p>
                             <ul class="roles">
                                 <li>Experienced with Software Development Life Cycle(SDLC) which includes methodologies like Waterfall and Agile method.</li>
