--- a/index.html
+++ b/index.html
@@ -69,25 +69,29 @@
                             <span id="about-title"></span>
                             <span class="input-cursor"></span>
                         </h2>
-                        <p>Web Developer located in Toronto, Ontario with 6+ years of experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues for Firefox & Internet Explorer users whilst rigorously adhering to project deadlines.</p>
+                        <p>Web Developer located in Toronto, Ontario with 7+ years of experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues whilst rigorously adhering to project deadlines.</p>
                         <ul class="icons-wrap">
                             <li class="icon gmail-wrap">
                                 <a href="mailto:darjimanali93@gmail.com" target="_blank">
-                                    <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g><path d="M25.49,30H4.5A3.35,3.35,0,0,1,2,29a3.35,3.35,0,0,1-1-2.48V5.5A3.35,3.35,0,0,1,2,3,3.35,3.35,0,0,1,4.5,2h21A3.35,3.35,0,0,1,28,3,3.35,3.35,0,0,1,29,5.5v21A3.52,3.52,0,0,1,25.49,30Zm-3-7.17a2.93,2.93,0,0,0,1.71-.37,1.41,1.41,0,0,0,.49-1.22V10.36a1.55,1.55,0,0,0-.47-1.13,1.51,1.51,0,0,0-1.13-.47H6.83a1.55,1.55,0,0,0-1.13.47,1.53,1.53,0,0,0-.47,1.12V21.24a1.53,1.53,0,0,0,.47,1.12,1.55,1.55,0,0,0,1.13.47Zm-14.7-.76V13.14l6.46,4.45Zm14.14.37H8l6.63-4.63a.6.6,0,0,0,.34.16,1,1,0,0,0,.33-.16Zm-7-8.15L8,9.16H21.9Zm7.14,7.78-6.46-4.48,6.46-4.45Z"/></g></svg>
+                                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 352c-16.53 0-33.06-5.422-47.16-16.41L0 173.2V400C0 426.5 21.49 448 48 448h416c26.51 0 48-21.49 48-48V173.2l-208.8 162.5C289.1 346.6 272.5 352 256 352zM16.29 145.3l212.2 165.1c16.19 12.6 38.87 12.6 55.06 0l212.2-165.1C505.1 137.3 512 125 512 112C512 85.49 490.5 64 464 64h-416C21.49 64 0 85.49 0 112C0 125 6.01 137.3 16.29 145.3z"/></svg>
                                 </a>
                             </li>
     
                             <li class="icon linkedin-wrap">
                                 <a href="https://www.linkedin.com/in/manalidarji/" target="_blank">
-                                    <svg style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" viewBox="0 0 512 512">
-                                        <path d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-386.892,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Zm-288.985,423.278l0,-225.717l-75.04,0l0,225.717l75.04,0Zm270.539,0l0,-129.439c0,-69.333 -37.018,-101.586 -86.381,-101.586c-39.804,0 -57.634,21.891 -67.617,37.266l0,-31.958l-75.021,0c0.995,21.181 0,225.717 0,225.717l75.02,0l0,-126.056c0,-6.748 0.486,-13.492 2.474,-18.315c5.414,-13.475 17.767,-27.434 38.494,-27.434c27.135,0 38.007,20.707 38.007,51.037l0,120.768l75.024,0Zm-307.552,-334.556c-25.674,0 -42.448,16.879 -42.448,39.002c0,21.658 16.264,39.002 41.455,39.002l0.484,0c26.165,0 42.452,-17.344 42.452,-39.002c-0.485,-22.092 -16.241,-38.954 -41.943,-39.002Z"/>
-                                        </svg>
+                                    <svg style="enable-background:new 0 0 512 512;" viewBox="0 0 512 512"><g><g><g><rect height="64%" width="19%" x="17.397" y="166.28"/><path d="M414.789,170.138c-1.133-0.355-2.207-0.743-3.396-1.078c-1.438-0.327-2.865-0.6-4.328-0.833     c-5.662-1.139-11.875-1.946-19.148-1.946c-62.211,0-101.678,45.372-114.674,62.894V166.28H166.526v328.97h106.716V315.813     c0,0,80.643-112.628,114.674-29.911V495.25h106.688V273.257C494.604,223.549,460.629,182.13,414.789,170.138L414.789,170.138z      M414.789,170.138"/><path d="M121.789,69.085c0,28.909-23.373,52.337-52.195,52.337c-28.824,0-52.196-23.429-52.196-52.337     c0-28.903,23.372-52.335,52.196-52.335C98.416,16.75,121.789,40.182,121.789,69.085L121.789,69.085z M121.789,69.085"/></g></g></g><g/></svg>
                                 </a>
                             </li>
     
                             <li class="icon github-wrap">
                                 <a href="https://github.com/manalidarji" target="_blank">
-                                    <svg enable-background="new 0 0 50 50" viewBox="0 0 50 50"><path d="M45,1H5C2.8,1,1,2.8,1,5v40c0,2.2,1.8,4,4,4h40c2.2,0,4-1.8,4-4V5C49,2.8,47.2,1,45,1z"/><path d="M30.4,40h-4h-4c0,0,0-2.4,0-4c-5.5,1.2-7-3-7-3c-1-2-2-3-2-3c-2-1.2,0-1,0-1c2,0,3,2,3,2  c1.8,3,4.9,2.5,6,2c0-1,0.4-2.5,1-3c-4.4-0.5-8-3-8-8s1-6,2-7c-0.2-0.5-1-2.3,0-5c0,0,2,0,4,3c1-1,4-1,5-1c1,0,4,0,5,1c2-3,4-3,4-3  c1.1,2.7,0.2,4.5,0,5c1,1,2,2,2,7s-3.6,7.5-8,8c0.6,0.5,1,2.2,1,3L30.4,40L30.4,40z" fill="#006778"/></svg>
+                                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+                                </a>
+                            </li>
+
+                            <li class="icon download-wrap">
+                                <a href="assets/docs/Manali_Darji_Resume.pdf" download="Manali_Darji_Resume">
+                                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"/></svg>
                                 </a>
                             </li>
                         </ul>
@@ -104,11 +108,11 @@
                     <div class="skills-content">
                         <div class="single-skill-type">
                             <p class="skill-type sub-heading">web development</p>
-                            <p class="all-skills">Javascript, Node.js, PHP, MongoDB, PostgreSQL.</p>
+                            <p class="all-skills">Javascript, ES6, Node.js, Express JS, PHP, MongoDB, PostgreSQL, Java Spring Boot.</p>
                         </div>
                         <div class="single-skill-type">
-                            <p class="skill-type sub-heading">Frontend Development</p>
-                            <p class="all-skills">HTML, CSS, SASS, React, Redux, Bootstrap, Wordpress.</p>
+                            <p class="skill-type sub-heading">Front-End Development</p>
+                            <p class="all-skills">HTML5, CSS3, SASS, React JS, Redux, Bootstrap, Wordpress.</p>
                         </div>
                         <div class="single-skill-type">
                             <p class="skill-type sub-heading">UI\UX Design</p>
@@ -128,53 +132,8 @@
             <div class="container">
                 <div class="experience-wrap my-flex-box">
                     <h6 class="section-title">experience<span>.</span></h6>
-                    <div class="experience-content content">
-                        <div class="single">
-                            <p class="sub-heading"><strong>UI Developer</strong> | Media.net Software Services (India) Pvt. Ltd</p>
-                            <p><em>Jul 2017 - Aug 2021</em></p>
-                            <ul class="roles">
-                                <li>Implemented Single Page Applications using React as Front-End Technology, along with integrating the
-                                    backend systems using Rest APIs.</li>
-                                <li>Implemented custom Wordpress themes from scratch as per the designs for 10+ websites.</li>
-                                <li>Delivered 10+ websites with engaging user experience and highly optimised code that helped reduce load
-                                    times by 60% and improved revenue by 35%.</li>
-                                <li>Followed modular and DRY(Don't Repeat Yourself) approach throughout the process, leading to decrease in
-                                    development time by 80%.
-                                    </li>
-                                <li>Implemented Google Analytics and Facebook Pixel Code which helped the business team understand various
-                                    user's interaction with the website, thus increasing the overall revenue by 15%.</li>
-                                <li>Created an internal workflow process for bulk tasks amongst team members which decreased the
-                                    turnaround time by 75%.</li>
-                                <li>Supervised and mentored 4 junior team members to achieve high performance of the team and meet all
-                                        business goals.</li>
-                            </ul>
-                        </div>
+                    <div class="experience-content content" id="all-exp-wrap">
 
-                        <div class="single">
-                            <p class="sub-heading"><strong>Freelance Web Developer</strong> | Snehanjali Electronics & Saisagar Garments</p>
-                            <p><em>May 2020 - Feb 2021</em></p>
-                            <ul class="roles">
-                                <li>Developed an e-commerce platform for the clients seeking an online presence using Wordpress and
-                                    WooCommerce.</li>
-                                <li>Assisted with online sales and reports which enabled the client to increase the user reach by 4 times and an
-                                    increase in revenue by 200%</li>
-                                <li>Handled all verbal and written communications between hosting companies, clients, and other vendors like
-                                    online payment gateways companies to ensure a smooth process.</li>
-                            </ul>
-                        </div>
-
-                        <div class="single">
-                            <p class="sub-heading"><strong>Software Engineer</strong> | Capgemini</p>
-                            <p><em>Jul 2014 - Jun 2017</em></p>
-                            <ul class="roles">
-                                <li>Experienced with Software Development Life Cycle(SDLC) which includes methodologies like Waterfall and Agile method.</li>
-                                <li>Acquired in-depth knowledge of industry's best testing practices for Functional and Performance testing of a web application.</li>
-                                <li>Created automated test cases for Functional and Regression testing based on the requirements using Ranorex Studio to decrease testing time by 60%</li>
-                                <li>Experienced in executing SQL queries in order to view successful transactions of data and for validating data.</li>
-                                <li>Reviewed and reported software bug reports, highlighting problem areas.</li>
-                                <li>Trained new hired team members and promoted supportive, performance-oriented atmosphere.</li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -238,7 +197,7 @@
     <!-- footer starts here -->
     <footer class="text-center">
         <div class="container">
-            manalidarji.github.io | Made with &nbsp; <span class="heart"></span> &nbsp; | 2022
+            manalidarji.github.io | Made with &nbsp; <span class="heart"></span> &nbsp; | <span id="current-year"></span>
         </div>
     </footer>
     <!-- footer ends here -->
