remove github.io link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <span id="about-title"></span>
                             <span class="input-cursor"></span>
                         </h2>
-                        <p>Web Developer located in Toronto, Ontario with 7+ years of experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues whilst rigorously adhering to project deadlines.</p>
+                        <p>Web Developer located in Toronto, Ontario with experience in building rich user interfaces and specialization in javascript development. Designed highly performant websites and applications that increased user engagement and resolved persistent browser compatibility issues whilst rigorously adhering to project deadlines.</p>
                         <ul class="icons-wrap">
                             <li class="icon gmail-wrap">
                                 <a href="mailto:darjimanali93@gmail.com" target="_blank">
@@ -197,7 +197,7 @@
     <!-- footer starts here -->
     <footer class="text-center">
         <div class="container">
-            manalidarji.github.io | Made with &nbsp; <span class="heart"></span> &nbsp; | <span id="current-year"></span>
+            manalidarji | Made with &nbsp; <span class="heart"></span> &nbsp; | <span id="current-year"></span>
         </div>
     </footer>
     <!-- footer ends here -->
