update education end date

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="education-content content">
                         <div class="single">
                             <p class="sub-heading"><strong>Advanced Diploma - Database Application Developer</strong> | Seneca College</p>
-                            <p><em>Sep 2021 - Current</em></p>
+                            <p><em>Sep 2021 - Aug 2022</em></p>
                             <ul class="roles">
                                 <li>Got into President's Honour List for Fall'21 Semester</li>
                             </ul>
