update: DAD program GPA

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <p class="sub-heading"><strong>Advanced Diploma - Database Application Developer</strong> | Seneca College</p>
                             <p><em>Sep 2021 - Aug 2022</em></p>
                             <ul class="roles">
-                                <li>Got into President's Honour List for Fall'21 Semester</li>
+                                <li>Got into President's Honour List with GPA 4.0</li>
                             </ul>
                         </div>
                         <div class="single">
